[tool.poetry]
name = "todo-app-poetry"
version = "0.1.0"
description = "a todo app built on fastapi sqlmodel"
authors = ["Saad Shamsi <114074040+saad-shamsi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.28.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
